--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zk-snarks-circom-example",
+  "name": "hide-and-seek",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
