--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "circomlib": "^2.0.5",
     "circom": "^0.5.46",
+    "circomlib": "^2.0.5",
     "snarkjs": "^0.6.10"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "@typechain/ethers-v5": "^10.2.0",
     "@typechain/hardhat": "^6.1.5",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.13.0",
     "hardhat-circom": "^3.3.2"
   }
